--- a/form.html
+++ b/form.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
-<body>
 
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+  </head>
+
+  <body>
+    <header>
+      <h1>Cadastro de currículo</h1>
+    </header>
+    <article>
+      <form action="" enctype="multipart/form-data"></form>
+      <fieldset>
+        <section>
+          <label for="nome-usuario">Nome:
+            <input type="text" id="nome-usuario" maxlength="40" requerid="required">
+          </label>
+          <label for="email-usuario">E-mail:
+            <input type="email" id="email-usuario" maxlength="50" requerid="required">
+          </label>
+          <label for="cpf-usuario">CPF:
+            <input type="number" id="cpf-usuario" maxlength="11" requerid="required">
+          </label>
+          <label for="endereco-usuario">Endereço:
+            <input type="text" id="endereco-usuario" maxlength="200" required="required">
+          </label>
+          <label for="endereco-usuario">Cidade:
+            <input type="text" id="endereco-usuario" maxlength="28" required="required">
+          </label>
+          <label for="estado">Estado:
+            <select id="estado">
+
+            </select>
+          </label>
+          </select>
+      </fieldset>
+    </article>
+  </body onload="addElemento()">
+
 </html>
