--- a/form.html
+++ b/form.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <script src="script.js"></script>
+    <title>Cadastro de currículo</title>
   </head>
 
   <body>
@@ -39,6 +40,6 @@
           </select>
       </fieldset>
     </article>
-  </body onload="addElemento()">
+  </body>
 
 </html>
