--- a/form.html
+++ b/form.html
@@ -18,31 +18,31 @@
       <form action="" enctype="multipart/form-data">
         <section>
           <label for="nome-usuario">Nome:
-            <input type="text" id="nome-usuario" maxlength="40" requerid="required">
+            <input type="text" id="nome-usuario" maxlength="40" requerid>
           </label>
         </section>
 
         <section>
           <label for="email-usuario">E-mail:
-            <input type="email" id="email-usuario" maxlength="50" requerid="required">
+            <input type="email" id="email-usuario" maxlength="50" requerid>
           </label>
         </section>
 
         <section>
           <label for="cpf-usuario">CPF:
-            <input type="number" id="cpf-usuario" maxlength="11" requerid="required">
+            <input type="number" id="cpf-usuario" maxlength="11" requerid>
           </label>
         </section>
 
         <section>
           <label for="endereco-usuario">Endereço:
-            <input type="text" id="endereco-usuario" maxlength="200" required="required">
+            <input type="text" id="endereco-usuario" maxlength="200" required>
           </label>
         </section>
 
         <section>
           <label for="endereco-usuario">Cidade:
-            <input type="text" id="endereco-usuario" maxlength="28" required="required">
+            <input type="text" id="endereco-usuario" maxlength="28" required>
           </label>
         </section>
 
@@ -55,7 +55,7 @@
         <section>
           <p>Tipo:</p>
           <label for="casa"><input type="radio" class="1" id="casa" name="moradia" value="casa"
-              required="required">Casa</label>
+              checked="checked">Casa</label>
           <label for="apart"><input type="radio" class="2" id="apart" name="moradia" value="apart">Apartamento</label>
         </section>
         <fieldset>
@@ -85,7 +85,7 @@
 
       </form>
     </article>
-    
+
   </body>
 
 </html>
